# trading-intent

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
config/: local.yaml
docs/: README.md
docs/design/: architecture.md  system-diagram.md
docs/reference/: dispatch-protocol.md  intent-xml-schema.md
docs/research/: README.md  github-landing-page.md  paper-outline.md  render_paper.py  tim-paper-zh.tex  tim-paper.bib  tim-paper.md  tim-paper.tex  tim-paper.zh.md  x-long-article.md  x-short-post.md
docs/research/figures/: pipeline-figure.tex
examples/: agent_demo.py  echo_executor.py
intents/: conditional_entry.yaml  immediate.yaml  limit_order.yaml
src/: config.rs  lib.rs
src/dispatch/: matcher.rs  mod.rs  sender.rs
src/http/: router.rs
src/http/handlers/: mod.rs
src/intent/: mod.rs  parser.rs  types.rs
src/schema/: loader.rs  mod.rs  template.rs  validator.rs
