[package]
name = "tim"
version = "0.1.0"
edition = "2021"
authors = ["TIM Contributors"]
description = "Trading Intent Model — schema-driven intent gateway for AI agents"
license = "MIT"
keywords = ["trading", "intent", "ai", "blockchain", "gateway"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = "0.32"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob-match = "0.2"
regex = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1.4"

[lib]
name = "tim"
path = "src/lib.rs"

[[bin]]
name = "tim_server"
path = "src/bin/server.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
